--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "name": "budgy-mob",
     "slug": "budgy-mob",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
+    "backgroundColor": "#ffffff",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
@@ -22,6 +23,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
