Refactor and enhance user configuration and expense components
- Replaced hardcoded string literals for `theme`, `currency`, and `language` with corresponding TypeScript enums.
- Updated `UserConfigOutputDto` and `UserConfigInputDto` types to use enums for `theme`, `currency`, and `language`.
- Introduced `ProfileSettingsPicker` and `ProfileSettingsToggle` components for better user configuration management.
- Enhanced `ExpenseInput`, `ExpenseItem`, and `ExpenseTable` components to support new enums and improve functionality.
- Updated `LoginScreen` for better UX with improved input handling.
- Refactored `MainNavigator` to include profile screen and better navigation handling.
- Applied various UI/UX improvements across components (e.g., added date constraints, improved input handling).
- Fixed issues with type imports and typings across multiple files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "strict": true,
     "jsx": "react-jsx",
     "moduleResolution": "bundler",
+//    "moduleResolution": "node",
+//    use that for npx @rtk-query/codegen-openapi openapi-config.ts
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
