--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@rtk-query/codegen-openapi": "^1.2.0",
     "expo": "~51.0.28",
     "expo-font": "~12.0.9",
+    "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
