--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "expo-font": "~12.0.9",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.2",
     "react-native-paper-dates": "^0.22.25",
     "react-native-picker-select": "^9.3.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "reanimated-color-picker": "^3.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
